<resources>
    <string name="app_name">Wallthereum</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="navigation_drawer_open">open</string>
    <string name="main_title">ETHEREUM WALLET</string>
    <string name="hint_password">password</string>
    <string name="new_wallet_button_text">create wallet</string>
    <string name="unlock_wallet_button">unlock existing wallet</string>
    <string name="main_view_subscript">Open Source Wallthereum Project.</string>
    <string name="invite">Invite</string>
    <string name="backup">Backup keystores</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="drawer_header_subscript">www.wallthereum.com</string>
    <string name="positive_button">okay</string>
    <string name="info_title">Read CAREFULY</string>
    <string name="info_message">this is for test</string>
    <string name="no_content">No Content Available</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="warning">warning</string>
    <string name="creation_warning">Note that your wallet\'s Private Key could not be recovered if lost, which means you will loose all your deposit. please save your private key and keystore. upon them all make sure you hit the backup button when loggen in.</string>
    <string name="no_transactions">no transaction yet</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="private_key">private key</string>
    <string name="keystore">keystore</string>
    <string name="address">Your wallet address</string>
    <string name="close">close</string>
    <string name="copy">copy</string>
    <string name="unlock_dialog_title">Select an option</string>
    <string name="unlock_with_keystore">unlock using keystore file</string>
    <string name="unlock_with_pk">unlock using private key</string>
    <string name="sync">sync account with google</string>
    <string name="wallet_unlock_success">unlocking successful</string>
    <string name="select_file">Select a keystore file</string>
    <string name="hint_private_key">private key</string>
    <string name="private_key_dialog_title">Private Key</string>
    <string name="copied">copied</string>
    <string name="balance">Balance</string>
    <string name="transaction_title">Create New Transaction</string>
    <string name="receiver_address_hint">receiver address</string>
    <string name="amount_hint">amount to send (ether)</string>
    <string name="gas_limit_hint">gas limit</string>
    <string name="data_hint">data</string>
    <string name="create_transaction_button">create transaction</string>
    <string name="transaction_form_title">Transfer Information</string>
    <string name="gas_section_title">Gas</string>
    <string name="gas_price">Gas price</string>
    <string name="transaction_fee">Transaction fee</string>
    <string name="gas_limit_error">minimum gas limit is 21000</string>
    <string name="send_transaction_warning">Transaction could not be reversed ! Are you sure you want to proceed ?</string>
    <string name="sender">Sender</string>
    <string name="receier">Receiver</string>
    <string name="amount">Amount</string>
    <string name="estimated_fee">Estimated fee</string>
    <string name="send_agreement_checkbox">i have read terms, and accept to send</string>
    <string name="transaction_sent_toast">transaction sent successfuly</string>
    <string name="sending_transaction">sending transaction ...</string>
    <string name="empty_password">empty password field</string>
    <string name="password_length_error_toast">short password</string>
    <string name="empty_password_error">Please enter a password</string>
    <string name="password_length_input_error">Password must be at least 8 characters</string>
    <string name="exchange">exchange coin</string>
    <string name="buy_coin">buy coin</string>
    <string name="share_item_title">share</string>
    <string name="soon">soon</string>
    <string name="decryption_error">wrong password</string>
    <string name="connection_error">network error</string>
    <string name="decryption_error_toast">wrong password</string>
    <string name="file_error_toast">file error</string>
    <string name="invalid_pk_toast">invalid private key</string>
    <string name="invalid_address">invalid address</string>
    <string name="transaction_status">transaction status</string>
    <string name="transaction_delete">delete</string>
    <string name="transaction_failed_toast">Transaction Failed</string>
    <string name="directory_selected_label">select a directory</string>
    <string name="none">none</string>
    <string name="btn_choose">select</string>
    <string name="saved">keystore saved</string>
    <string name="save_failed">save failed</string>
    <string name="version">Version</string>
    <string name="license_description">2018-2019 Wallthereum Project.\nOpen Source Release.</string>
    <string name="github_link"><a href="https://github.com/Msiavashi/wallthereum-android">GITHUB</a></string>
</resources>
