<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="none">
        <!--<item-->
            <!--android:id="@+id/invite_friend"-->
            <!--android:onClick="onInviteClicked"-->
            <!--android:icon="@drawable/baseline_person_add_black_18dp"-->
            <!--android:title="@string/invite" />-->

        <item
            android:icon="@drawable/baseline_backup_black_18dp"
            android:title="@string/backup" />

        <!--<item-->
            <!--android:id="@+id/settings"-->
            <!--android:icon="@drawable/baseline_settings_black_18dp"-->
            <!--android:title="@string/settings" />-->

        <item
            android:icon="@drawable/swao_48"
            android:title="@string/exchange" />

        <item
            android:icon="@drawable/buy_48"
            android:title="@string/buy_coin" />

        <item
            android:onClick="onAboutClicked"
            android:icon="@drawable/baseline_info_black_18dp"
            android:title="@string/about" />

        <item
            android:onClick="onExitClicked"
            android:icon="@drawable/baseline_exit_to_app_black_18dp"
            android:title="@string/exit" />
    </group>
</menu>
